--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     action: 'Create Or Update Resource Group'
     resourceGroupName: 'webapp'
     location: 'West Europe'
-    templateLocation: 'URL of the file'
-    csmFileLink: 'https://raw.githubusercontent.com/janv400/mapjesrepo/main/createwebapp/azuredeploy.json'
-    overrideParameters: 'webAppName = "janjanjanjanjan"'
+    templateLocation: 'Linked artifact'
+    csmFileLink: 'createwebapp/azuredeploy.json'
+    overrideParameters: '-webAppName janjanjanjanjan'
     deploymentMode: 'Incremental'
